<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jignesh.shopex.customer.ui.home.CustomerHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_customer_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.jignesh.shopex.customer.ui.orders.CustomerOrdersFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_customer_orders" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.jignesh.shopex.customer.ui.account.CustomerAccountFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_customer_account" />
</navigation>