<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".userLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/innerLYT"
        android:layout_marginBottom="15dp"
        android:text="@string/user_login_warn_txt"
        android:textSize="16sp"
        android:textColor="@color/main_color"/>

    <LinearLayout
        android:id="@+id/innerLYT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ul_login_btn_wrapper">

        <Button
            android:id="@+id/UL_shopKeeperLGNBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login_sk_txt"
            android:background="@drawable/toggle_bg_user_login"/>

        <Button
            android:id="@+id/UL_customerLGNBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login_cust_txt"
            android:textColor="@color/main_color"
            android:background="@drawable/ul_login_btn_wrapper"/>

    </LinearLayout>

</RelativeLayout>