<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".shopkeeper.ShopkeeperRegistration">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="-32dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/registration" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-16dp"
        android:text="Register"
        android:textColor="@color/main_color"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/skp_reg_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/reg_lgn_email_hint"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:text="sujla@gmail.com"/>

            <EditText
                android:id="@+id/skp_reg_mob_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_mobile"
                android:drawablePadding="8dp"
                android:hint="@string/reg_mob_hint"
                android:inputType="number"
                android:padding="12dp"
                android:text="9999999999"/>

            <EditText
                android:id="@+id/skp_reg_add_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_add"
                android:drawablePadding="8dp"
                android:hint="@string/reg_add_hint"
                android:inputType="textPostalAddress"
                android:padding="12dp"
                android:text="123 fajsjkadshfkjask"/>

            <EditText
                android:id="@+id/skp_reg_shop_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_store"
                android:drawablePadding="8dp"
                android:hint="@string/reg_shop_name_hint"
                android:inputType="text"
                android:padding="12dp"
                android:text="fjask lkjl"/>

            <EditText
                android:id="@+id/skp_reg_shop_owner_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:hint="@string/reg_shop_owner_hint"
                android:inputType="text"
                android:padding="12dp"
                android:text="fjasdjkljasl"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/skp_reg_ctg_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                app:hintEnabled="false"
                android:textColorHint="#454545"
                app:boxStrokeColor="#454545"
                app:boxStrokeWidthFocused="1dp">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:drawableStart="@drawable/ic_category"
                    android:drawablePadding="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:textSize="16sp"
                    android:hint="@string/reg_ctg_hint"
                    android:text="Xyz xyz"/>

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/skp_reg_pass_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/reg_lgn_pass_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:text="0"/>

            <EditText
                android:id="@+id/skp_reg_cfm_pass_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/reg_cfm_pass_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:text="0"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:text="@string/reg_work_days_title"/>

            <RadioGroup
                android:id="@+id/skp_reg_work_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    android:paddingHorizontal="8dp"
                    android:layout_marginHorizontal="10dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/reg_custom_radio"
                    android:text="@string/reg_work_days_rb1"
                    android:textColor="@drawable/reg_custom_radio_txt_clr"/>

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    android:paddingHorizontal="8dp"
                    android:layout_marginHorizontal="10dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/reg_custom_radio"
                    android:text="@string/reg_work_days_rb2"
                    android:textColor="@drawable/reg_custom_radio_txt_clr"/>

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    android:paddingHorizontal="8dp"
                    android:layout_marginHorizontal="10dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/reg_custom_radio"
                    android:text="@string/reg_work_days_rb3"

                    android:textColor="@drawable/reg_custom_radio_txt_clr"/>

            </RadioGroup>

            <Button
                android:id="@+id/skp_reg_btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingVertical="10dp"
                android:textAllCaps="false"
                android:letterSpacing="0"
                android:textSize="18sp"
                android:text="@string/reg_btn"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_skp_reg_login_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="Login Here"
                    android:textColor="@color/main_color"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>