<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".customer.CustomerRegistration">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/registration" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-4dp"
        android:text="Register"
        android:textColor="@color/main_color"
        android:textSize="48sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/csm_reg_usr_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:hint="@string/reg_usr_name_hint"
                android:inputType="text"
                android:padding="16dp" />

            <EditText
                android:id="@+id/csm_reg_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/reg_lgn_email_hint"
                android:inputType="textEmailAddress"
                android:padding="16dp" />

            <EditText
                android:id="@+id/csm_reg_mob_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_mobile"
                android:drawablePadding="8dp"
                android:hint="@string/reg_mob_hint"
                android:inputType="number"
                android:padding="16dp" />

            <EditText
                android:id="@+id/csm_reg_add_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_add"
                android:drawablePadding="8dp"
                android:hint="@string/reg_add_hint"
                android:inputType="textPostalAddress"
                android:padding="16dp" />

            <EditText
                android:id="@+id/cms_reg_pass_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/reg_lgn_pass_hint"
                android:inputType="textPassword"
                android:padding="16dp" />

            <EditText
                android:id="@+id/cms_reg_cfm_pass_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/reg_cfm_pass_hint"
                android:inputType="textPassword"
                android:padding="16dp" />

            <Button
                android:id="@+id/cms_reg_btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingVertical="12dp"
                android:textAllCaps="false"
                android:letterSpacing="0"
                android:textSize="18sp"
                android:text="@string/reg_btn"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_csm_reg_login_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Login Here"
            android:textColor="@color/main_color"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>